crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__if_with_block.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(IF_EXPRESSION)
AddToken
AddToken
Tombstone
Tombstone
Tombstone
StartNode(BINARY_EXPRESSION)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
AddToken
StartNode(BLOCK)
AddToken
StartNode(EXPRESSION_STATEMENT)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(POSTFIX_UNARY_EXPRESSION)
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
StartNode(CALL_EXPRESSION)
StartNode(VALUE_ARGUMENTS)
AddToken
AddToken
FinishNode
FinishNode
FinishNode
FinishNode
AddToken
FinishNode
AddToken
StartNode(BLOCK)
AddToken
StartNode(EXPRESSION_STATEMENT)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(POSTFIX_UNARY_EXPRESSION)
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
StartNode(CALL_EXPRESSION)
StartNode(VALUE_ARGUMENTS)
AddToken
AddToken
FinishNode
FinishNode
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
