crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__indexing_suffix.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(POSTFIX_UNARY_EXPRESSION)
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
StartNode(INDEXING_EXPRESSION)
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
AddToken
FinishNode
StartNode(INDEXING_EXPRESSION)
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
AddToken
FinishNode
FinishNode
