crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__is_and_in_operators.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
StartNode(BINARY_EXPRESSION)
Tombstone
Tombstone
StartNode(IS_EXPRESSION)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
AddToken
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
FinishNode
AddToken
Tombstone
Tombstone
StartNode(IN_EXPRESSION)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
FinishNode
