crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__jump_expressions.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(JUMP_EXPRESSION)
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
