crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__logical_operators.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
StartNode(BINARY_EXPRESSION)
StartNode(BINARY_EXPRESSION)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
