crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__object_literal.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(OBJECT_LITERAL)
AddToken
AddToken
StartNode(DELEGATION_SPECIFIERS)
StartNode(DELEGATION_SPECIFIER)
Tombstone
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
FinishNode
FinishNode
StartNode(CLASS_BODY)
AddToken
StartNode(FUNCTION_DECL)
StartNode(MODIFIER_LIST)
AddToken
FinishNode
AddToken
AddToken
StartNode(VALUE_PARAMETERS)
AddToken
AddToken
FinishNode
StartNode(BLOCK)
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
